Fix broken menus in status bar widgets

Parents: Watch your children's style!

KStatusBar sets a style sheet for "::item", without specifying any other selector.
This causes children that respect that sub control, such as QMenu, to inherit the
properties and break their appearance.

Reverting commit 641933. It is not required, because KStyle, as well as Oxygen,
do not render status bar frames. The nice side effect is that KStatusBar now
actually respects the platform's style.

BUG: 177328
CCMAIL: aseigo@kde.org

svn path=/trunk/KDE/kdelibs/; revision=941619